Adamantite.CSharp.Bindings/src/GFX/GPU/Interop/SDLRendererNative.cs

// This file is auto-generated by Adamantite Binding Generator.
// Do not edit this file manually. Instead, edit the source C++ headers and regenerate the bindings.
// For more information, visit the Adamantite repository:
// Repo: https://github.com/fy-nite/Adamantite
// Version: 0.1.0
using System;
using System.Runtime.InteropServices;

public static class NativeBindings
{
    [DllImport("Adamantite.Cpp", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr renderer_create();
    [DllImport("Adamantite.Cpp", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr renderer_destroy(IntPtr handle);
    [DllImport("Adamantite.Cpp", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr renderer_init(IntPtr handle, int width, int height, IntPtr title);
    [DllImport("Adamantite.Cpp", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr renderer_begin_frame(IntPtr handle);
    [DllImport("Adamantite.Cpp", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr renderer_end_frame(IntPtr handle);
    [DllImport("Adamantite.Cpp", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr renderer_clear(IntPtr handle, float r, float g, float b, float a);
    [DllImport("Adamantite.Cpp", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr renderer_shutdown(IntPtr handle);
    [DllImport("Adamantite.Cpp", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr renderer_present_pixels(IntPtr handle, IntPtr pixels, int width, int height);
}
